--- a/Agendamento/WebContent/css/estilo.css
+++ b/Agendamento/WebContent/css/estilo.css
@@ -129,10 +129,18 @@ input {
 }
 
 .erro {
-	background-color: red;
 	font-size: 14px;
-	color: black;
-	border: 1px white doted;
+	color: red;
+	border-bottom: 1px red dotted;
+	font-weight: bold;
+}
+
+.erroGeral {
+	font-size: 14px;
+	color: red;
+	border-top: 1px red dotted;
+	border-bottom: 1px red dotted;
+	font-weight: bold;	
 }
 
 /* Links */
